# swformat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CARCHIVE.md  COMPATIBILITY.md  DRAWING_METADATA.md  FEATURES.md  FORMAT_GUIDE.md  LEGAL.md  REVERSE_ENGINEERING.md  ROADMAP.md
src/swformat/: __init__.py  _imported_swx_reader_v0.py  compat.py  types.py
src/swformat/api/: __init__.py  annotations.py  components.py  configurations.py  cutlist_xml.py  dimensions.py  docprops.py  keywords.py  materials.py  metadata.py  properties.py  references.py  sheets.py  sketches.py  tables.py  views.py
src/swformat/carchive/: __init__.py  archive.py  cmgrhdr2.py  cstring.py  cusprops.py  objmap.py
src/swformat/chunks/: __init__.py  toc.py  walker.py
src/swformat/io/: __init__.py  reader.py  stable_mask.py  writer.py
src/swformat/streams/: __init__.py  custom_props.py
src/swformat/tools/: __init__.py  diff_files.py  dump_streams.py  echo_check.py  sw_comptree.py  sw_configs.py  sw_cutlist.py  sw_dims.py  sw_docinfo.py  sw_keywords.py  sw_material.py  sw_meta.py  sw_notes.py  sw_prop.py  sw_refs.py  sw_sheets.py  sw_sketch.py  sw_tables.py  sw_version.py  sw_views.py
test/corpus/: corpus.config.json
test/harness/: layer3_propedit.py  layer3_reopen.py  proof_of_life.py  test_annotations.py  test_carchive.py  test_chunk_walker.py  test_configurations.py  test_dimensions_index.py  test_keywords.py  test_metadata.py  test_properties.py  test_references.py  test_roundtrip.py  test_sheets.py  test_sketches.py  test_tables.py  test_toc.py  test_views.py  test_xml_readers.py  twin_save_baseline.py
